--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.security:spring-security-web')
 	compile('org.springframework.security:spring-security-config')
+	compile('org.springframework.session:spring-session-data-redis')
 	compile('redis.clients:jedis')
 	compile('org.projectlombok:lombok:1.18.0')
 	compileOnly('org.projectlombok:lombok')
